add list_challenge_platforms tool